# PicSee

src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: extended_formats.rs  images.rs  lib.rs  settings.rs  thumbnails.rs
src-tauri/src/large_image/: bmp.rs  error.rs  policy.rs  session.rs
src-tauri/tests/: images_contract.rs
src/components/: AppLayout.vue  ImageCanvasViewer.vue  SettingsModal.vue  StatusBar.vue  ThumbnailSidebar.vue  TopToolbar.vue
src/composables/: useLargeImage.ts
src/locales/: en-US.ts  zh-CN.ts
src/stores/: directory.ts  image.ts  settings.ts  viewer.ts
src/types/: image.ts  settings.ts
