[package]
name = "picsee"
version = "0.1.0"
description = "PicSee 图片查看器"
authors = ["PicSee"]
edition = "2021"

[lib]
name = "picsee_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
